[tool.poetry]
name = "test-prefect-2"
version = "0.1.0"
description = ""
authors = ["RAF-coder-py <ralph.honhon@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
prefect = "2.20.3"
urllib3 = "1.26.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
